--- a/client/vercel.json
+++ b/client/vercel.json
@@ -1,4 +1,10 @@
 {
+    "rewrites": [
+        {
+            "source": "/api/:path*",
+            "destination": "REPLACE_WITH_YOUR_BACKEND_URL/api/:path*"
+        }
+    ],
     "routes": [
         {
             "handle": "filesystem"
