--- a/client/vercel.json
+++ b/client/vercel.json
@@ -2,7 +2,7 @@
     "rewrites": [
         {
             "source": "/api/:path*",
-            "destination": "REPLACE_WITH_YOUR_BACKEND_URL/api/:path*"
+            "destination": "https://prompts-server-drab.vercel.app/api/:path*"
         }
     ],
     "routes": [
