--- a/server/.env.example
+++ b/server/.env.example
@@ -1,3 +1,28 @@
-MONGODB_URI=your_mongodb_atlas_connection_string
+# Server Configuration
 PORT=5000
-JWT_SECRET=your_jwt_secret
+NODE_ENV=development
+
+# Database
+MONGODB_URI=mongodb://localhost:27017/prompts
+
+# JWT Secret (Change this to a secure random string)
+JWT_SECRET=your_super_secret_jwt_key_change_this_in_production
+
+# Email Configuration (For OTP)
+# For Gmail, you need to create an "App Password" in your Google Account settings
+EMAIL_HOST=smtp.gmail.com
+EMAIL_PORT=587
+EMAIL_USER=your_email@gmail.com
+EMAIL_PASSWORD=your_app_password_here
+
+# File Upload Configuration
+UPLOAD_DIR=./uploads
+MAX_FILE_SIZE=104857600
+VIDEO_COMPRESSION_QUALITY=720
+
+# Demo Credentials (Read-only, don't change)
+DEMO_EMAIL=demo@nanoprompts.space
+DEMO_PASSWORD=demo123
+
+# CORS Origins (comma-separated)
+ALLOWED_ORIGINS=http://localhost:3000,http://localhost:5173,https://nanoprompts.space
