--- a/server/package.json
+++ b/server/package.json
@@ -19,9 +19,11 @@
     "csv-parser": "^3.2.0",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
+    "fluent-ffmpeg": "^2.1.3",
     "jsonwebtoken": "^9.0.3",
     "mongoose": "^9.1.5",
     "multer": "^2.0.2",
+    "nodemailer": "^7.0.12",
     "prisma": "^7.3.0"
   },
   "devDependencies": {
